# bluecherry-client

./: .gitignore  BUILD-MACOSX.txt  BUILD-UBUNTU.txt  BUILD-WINDOWS.txt  CMakeLists.txt  COPYING  Makefile.am  README.md  README.txt  Readme.md  VERSION  build_cygwin_x86_64-w64-mingw32.sh  client.pro  configure.ac  linux-user.cmake  macosx-user.cmake  readme.md  windows-user.cmake  x86_64-w64-mingw32.cmake  x86_64-w64-mingw32_user.cmake
breakpad-bin/mac/: dump_syms  gather_symbols.sh  minidump_stackwalk
cmake/: AddExternalFFmpeg.cmake  AddExternalMplayer.cmake  AddExternalQt.cmake  CorrectWindowsPaths.cmake  CpuCoresCount.cmake  breakpad.cmake  build.cmake  display-status.cmake  gstreamer.cmake  install.cmake  libSDL2.cmake  libav.cmake  libmpv.cmake  macosx.cmake  moc_sources.cmake  msvc.cmake  qt.cmake  resources.cmake  sources.cmake  translations.cmake  version.cmake  win32.cmake
cmake/Modules/: FindBreakpadClient.cmake  FindGStreamer-0.10.cmake  FindGStreamerApp-0.10.cmake  FindLibAVCodec.cmake  FindLibAVFormat.cmake  FindLibAVUtil.cmake  FindLibMPV.cmake  FindLibSDL2.cmake  FindLibSWScale.cmake  FindQt4.cmake  Qt4Macros.cmake
cmake/tests/: bluecherry-add-test.cmake  test.cmake
debian/: bluecherry-client.install  changelog  control  copyright  rules
gstreamer-bin/mac/: import.sh
linux/: Bluecherry Client.desktop  Bluecherry Client.desktop.in  bluecherry-client.desktop  bluecherry-client.desktop.in
mac/: Info.plist  Info.plist.in  deploy.sh  package.sh  replacepath.py
mplayer-bin/mac/: configure.txt
mplayer-bin/win/: Readme.txt
msys2/: README.md  build-client.sh  build-installer.sh
res/: bluecherry.icns  license.txt  resources.qrc  windows.rc
scripts/: create-debian-package.sh  create-source-package.sh  install-libav.sh  install-qt.sh
src/: bluecherry-config.h.in  main.cpp
src/audio/: AudioPlayer.cpp  AudioPlayer.h
src/camera/: DVRCamera.cpp  DVRCamera.h  DVRCameraData.cpp  DVRCameraData.h  DVRCameraSettingsReader.cpp  DVRCameraSettingsReader.h  DVRCameraSettingsWriter.cpp  DVRCameraSettingsWriter.h  DVRCameraStreamReader.cpp  DVRCameraStreamReader.h  DVRCameraStreamWriter.cpp  DVRCameraStreamWriter.h  DVRCameraXMLReader.cpp  DVRCameraXMLReader.h  RecordingState.h
src/core/: BluecherryApp.cpp  BluecherryApp.h  CameraPtzControl.cpp  CameraPtzControl.h  DVRCamera.cpp  DVRCamera.h  DVRServer.cpp  DVRServer.h  EventData.cpp  EventData.h  LanguageController.cpp  LanguageController.h  LiveStream.cpp  LiveStream.h  LiveStreamWorker.cpp  LiveStreamWorker.h  LiveViewManager.cpp  LiveViewManager.h  LoggableUrl.cpp  LoggableUrl.h  MJpegStream.cpp  MJpegStream.h  PtzPresetsModel.cpp  PtzPresetsModel.h  ServerRequestManager.cpp  ServerRequestManager.h  ThreadPause.cpp  ThreadPause.h  TransferRateCalculator.cpp  TransferRateCalculator.h  UpdateChecker.cpp  UpdateChecker.h  VaapiHWAccel.cpp  VaapiHWAccel.h  Version.cpp  Version.h
src/event/: CameraEventFilter.cpp  CameraEventFilter.h  EventDownloadManager.cpp  EventDownloadManager.h  EventFilter.cpp  EventFilter.h  EventList.cpp  EventList.h  EventParser.cpp  EventParser.h  EventVideoDownload.cpp  EventVideoDownload.h  EventsCursor.cpp  EventsCursor.h  EventsLoader.cpp  EventsLoader.h  EventsUpdater.cpp  EventsUpdater.h  MediaEventFilter.cpp  MediaEventFilter.h  ModelEventsCursor.cpp  ModelEventsCursor.h  ThumbnailManager.cpp  ThumbnailManager.h
src/events/: EventsCursor.h  EventsLoader.cpp  EventsLoader.h  ModelEventsCursor.cpp  ModelEventsCursor.h
src/live-stream/: LiveStream.cpp  LiveStream.h  LiveStreamFrame.cpp  LiveStreamFrame.h  LiveStreamFrameFormatter.cpp  LiveStreamFrameFormatter.h  LiveStreamFrameQueue.cpp  LiveStreamFrameQueue.h  LiveStreamThread.cpp  LiveStreamThread.h  LiveStreamWorker.cpp  LiveStreamWorker.h
src/network/: MediaDownloadManager.cpp  MediaDownloadManager.h  RemotePortChecker.cpp  RemotePortChecker.h  SocketError.cpp  SocketError.h
src/rtsp-stream/: RtspStream.cpp  RtspStream.h  RtspStreamFrame.cpp  RtspStreamFrame.h  RtspStreamFrameFormatter.cpp  RtspStreamFrameFormatter.h  RtspStreamFrameQueue.cpp  RtspStreamFrameQueue.h  RtspStreamThread.cpp  RtspStreamThread.h  RtspStreamWorker.cpp  RtspStreamWorker.h
src/server/: DVRServer.cpp  DVRServer.h  DVRServerConfiguration.cpp  DVRServerConfiguration.h  DVRServerConnectionType.h  DVRServerRepository.cpp  DVRServerRepository.h  DVRServerSettingsReader.cpp  DVRServerSettingsReader.h  DVRServerSettingsWriter.cpp  DVRServerSettingsWriter.h
src/ui/: AboutDialog.cpp  AboutDialog.h  CameraAreaWidget.cpp  CameraAreaWidget.h  CrashReportDialog.cpp  CrashReportDialog.h  DVRServersModel.cpp  DVRServersModel.h  DVRServersView.cpp  DVRServersView.h  EventCommentsWidget.cpp  EventCommentsWidget.h  EventSourcesModel.cpp  EventSourcesModel.h  EventTagsDelegate.cpp  EventTagsDelegate.h  EventTagsModel.h  EventTagsView.cpp  EventTagsView.h  EventTimelineDatePainter.cpp  EventTimelineDatePainter.h  EventTimelineWidget.cpp  EventTimelineWidget.h  EventTypesFilter.cpp  EventTypesFilter.h  EventVideoDownload.cpp  EventVideoDownload.h  EventVideoDownloadWidget.cpp  EventVideoDownloadWidget.h  EventVideoDownloadsWindow.cpp  EventVideoDownloadsWindow.h  EventVideoPlayer.cpp  EventVideoPlayer.h  EventViewWindow.cpp  EventViewWindow.h  EventsModel.cpp  EventsModel.h  EventsView.cpp  EventsView.h  EventsWindow.cpp  (+44 more)
src/utils/: Breakpad.cpp  DateTimeRange.cpp  DateTimeRange.h  DateTimeUtils.cpp  DateTimeUtils.h  FileUtils.cpp  FileUtils.h  ImageDecodeTask.cpp  ImageDecodeTask.h  PlatformOSX.mm  Range.cpp  Range.h  RangeMap.cpp  RangeMap.h  StringUtils.cpp  StringUtils.h  ThreadTask.cpp  ThreadTask.h  ThreadTaskCourier.cpp  ThreadTaskCourier.h  explorerstyle.cpp  (+1 more)
tests/: main.cpp  tests.pro
translations/: README  bluecherryclient_de_DE.ts  bluecherryclient_en.ts  bluecherryclient_es.ts  bluecherryclient_no.ts  bluecherryclient_pl.ts  bluecherryclient_ru_RU.ts  bluecherryclient_sv_SE.ts  setup-transifex.sh
win/: cross_build_mxe.sh  installer.nsi  installer.nsi.in  installer32.nsi.in  installer64.nsi.in  installer64_mingw.nsi.in  mxe.patch
(+190 files in other folders)
